force-app/main/default/objects/Allegation__c/Allegation__c.object-meta.xml
<CustomObject>
    <label>Allegation</label>
    <nameField>
        <label>Allegation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allegations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>