force-app/main/default/objects/Allegation__c/fields/Allegation__c.field-meta.xml
<CustomField>
    <fullName>Allegation__c</fullName>
    <label>Allegation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sexual Abuse</fullName>
            </value>
            <value>
                <fullName>Physical Abuse</fullName>
            </value>
            <value>
                <fullName>Emotional Abuse</fullName>
            </value>
            <value>
                <fullName>Neglect and Deprivation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>