force-app/main/default/objects/Allegation__c/fields/Alleged_Child__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alleged Child</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Allegations</relationshipLabel>
    <relationshipName>Allegations</relationshipName>
    <type>Lookup</type>
</CustomField>