force-app/main/default/objects/Allegation__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>Proven</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>