force-app/main/default/objects/Allegation__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsubstantiated</fullName>
            </value>
            <value>
                <fullName>Substantiated (Founded)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>