force-app/main/default/objects/Allegation__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>vlocity_ps__Incident__c</referenceTo>
    <relationshipLabel>Allegations</relationshipLabel>
    <relationshipName>Allegations</relationshipName>
    <type>Lookup</type>
</CustomField>