force-app/main/default/objects/Allegation__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <label>Investigation</label>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Allegations</relationshipLabel>
    <relationshipName>Allegations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>